<resources>
    <string name="app_name">List Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="title_activity_signup">SignupActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember ?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up Now</string>
    <string name="sign_in">Already have an account? Sign in</string>


    <string-array name="Todo_Type">
        <item>School</item>
        <item>Work</item>
        <item>Shopping</item>
        <item>Meeting</item>
        <item>Project</item>
        <item>Others</item>
    </string-array>
</resources>
